# motorsport-calendar

./: .coveragerc  .gitignore  .mutmut-cache  .pylintrc  CHANGELOG.md  CONTRIBUTING.md  DATA_SOURCES.md  MANIFEST.in  Makefile  PROJECT_STRUCTURE.md  README.md  RELEASES.md  REQUIREMENTS.md  codecov.yml  config.example.json  coverage.unit.local.xml  debug_weekend_filter.py  motorsport_calendar.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/: pull_request_template.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.md  critical_fix_tomada_tempo.md  feature_request.md
.github/import_issues/: README.md  import_issues.py
.github/workflows/: flaky-nightly.yml  mutmut-baseline.yml  regression-tests.yml  release-drafter.yml  tests.yml
.windsurf/rules/: audittests.md  motorsportcalendar.md  tester.md
config/: config.example.json  config.json.bak  config.json.new  config.process_pool.json
docs/: CONFIGURATION_GUIDE.md  EMBEDDINGS_WITH_ONNX.md  LOGGING_AND_CONFIGURATION.md  TEST_AUTOMATION_PLAN.md  TEST_PLAN.md
docs/architecture/: ai_implementation_plan.md  race_calendar_technical_report.md
docs/tests/: overview.md
output/history/: motorsport_events_20250801_20250803_220421.ics  motorsport_events_20250802_20250803_220421.ics  motorsport_events_20250803_20250803_220421.ics
scripts/: create_patch_0_5_2_pr.sh  export_test_onnx_model.py  motorsport_calendar.py  tests_phase0_cleanup.sh  tests_phase0_inventory.sh  tests_phase0_move_outside_tests.sh
scripts/eval/: benchmarks.py  export_onnx.py
scripts/test/: README.md  __init__.py  benchmark_embeddings.py  run_embeddings_tests.py
sources/: __init__.py  base_source.py  tomada_tempo.py
src/: __init__.py  category_detector.py  config_manager.py  data_collector.py  event_processor.py  ical_generator.py  logger.py  silent_period.py  ui_manager.py
src/ai/: __init__.py  cache.py  embeddings_service.py
src/motorsport_calendar/: __init__.py  config_manager.py  event_processor.py  ical_generator.py  silent_period.py
src/sources/: sources
src/utils/: __init__.py  anomaly_detector.py  config_validator.py  error_codes.py  markdown_front_matter.py  payload_manager.py
test_results_github/: junit.xml  report.html
tests/: README.md  __init__.py  conftest.py  test_issue_3_fixes.py  test_silent_period.py  test_tomada_tempo.py
tests/config/: test_config.json
tests/data/: README.md
tests/integration/: test_it2_tomada_tempo_dates_tz.py  test_it2_tomada_tempo_entities_and_duplicates.py  test_it2_tomada_tempo_fallbacks_and_parsing.py  test_it2_tomada_tempo_multiday_and_location.py  test_it2_tomada_tempo_streaming_constraints.py  (+30 more)
(+320 files in other folders)
